--- a/flexbox/Three Column Layout/css/flexbox.css
+++ b/flexbox/Three Column Layout/css/flexbox.css
@@ -13,7 +13,15 @@
 	}
 
 	.col {
-		flex: 1;
+		flex: 1 50%;
+	}
+
+	.row {
+		flex-wrap: wrap;
+	}
+
+	.secondary {
+		order: -1;
 	}
 }   
 
@@ -23,7 +31,11 @@
 		justify-content: space-between;
 	}
 
+	.col {
+		flex-basis: 0;
+	}
+
 	.primary {
-		flex: 2;
+		flex-grow: 1.4;
 	}
 }
