--- a/flexbox/Aligning Items To Bottom of a Colum/css/flexbox.css
+++ b/flexbox/Aligning Items To Bottom of a Colum/css/flexbox.css
@@ -6,7 +6,7 @@
 
 	.main-header,
 	.main-nav,
-	.row {
+	.row, .col {
 		display: flex;
 	}
 
@@ -17,6 +17,12 @@
 
 	.col {
 		flex: 1;
+		flex-direction: column;
+	}
+
+	.button {
+		margin-top: auto;
+		align-self: flex-start;
 	}
 
 }
